# mon-anniversaire

./: .gitignore  README.md  index.html  my-release-key.keystore  package-lock.json  package.json  sign.sh
src/: App.vue  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AnniversaryEditor.ts  AnniversaryEditor.vue  AnniversaryList.ts  AnniversaryList.vue  CreateAnniversary.vue  DateCalculator.ts  DateCalculator.vue  TabsContainer.vue
src/types/: index.ts
src/utils/: apiClient.ts
