[package]
name = "mon-anniversaire"
version = "0.1.0"
description = "Mon Anniversaire App"
authors = ["feuyeux@gmail.com"]
edition = "2024"

[lib]
name = "mon_anniversaire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
