[package]
name = "mon-anniversaire"
version = "0.1.0"
description = "Mon Anniversaire App"
authors = ["feuyeux@gmail.com"]
edition = "2024"

[lib]
name = "mon_anniversaire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-os = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
# 开发模式优化级别提高
opt-level = 1
# 仅优化关键依赖
[profile.dev.package."*"]
opt-level = 1
